BugFix: Close preview on tap outside the preview on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -222,7 +222,7 @@ main span {
 
     /* --- Mouse-Over-Div --- */
     .mouseover {  
-        height: 80vw;
+        height: 50vh;
         background-position: center;
     }
 
